--- a/grappelli/compass/sass/partials/layout/_modules.scss
+++ b/grappelli/compass/sass/partials/layout/_modules.scss
@@ -422,7 +422,7 @@ fieldset.grp-module .grp-row {
 		    overflow: hidden;
 		    padding: 1px 20px;
 		    vertical-align: top;
-		    // white-space: nowrap;
+		    white-space: nowrap;
 		    border-left: 1px solid #FFFFFF;
     		border-right: 1px solid #E0E0E0;
     		&:first-of-type {
